apps/freshrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: default
spec:
  selector:
    app: freshrss
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
